Box align fixed

--- a/css/index.css
+++ b/css/index.css
@@ -14,8 +14,12 @@ a{
  background-color:#000;
  color: #fff;
  border-color:#080808;
- min-height:50px;
+// min-height:10px;
  border: 1px solid transparent;
+ 
+ width: 100%;
+ height: 50px;
+ position:fixed;
 }
 
 .inner-header{
@@ -55,7 +59,7 @@ a{
 
 .inner-banner-image{
  padding-top:12%;
- width:80%;
+ width:50%;
  margin:auto;
 }
 
@@ -114,6 +118,7 @@ a{
 
 .footer{
  background-color: #000;
+ text-align: center;
  color:#fff;
  font-size:14px;
 }
